// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop Snapshots renders Backdrop with class 1`] = `
<div
  className="container test"
/>
`;

exports[`Backdrop Snapshots renders Backdrop with default options 1`] = `
<div
  className="container"
/>
`;
